Fixed layout issue

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 .container > * {
-    margin-top: 30px;
+    margin-top: 5px;
 }
 
 #expected {
